--- a/package.json
+++ b/package.json
@@ -23,8 +23,15 @@
   },
   "dependencies": {
     "@aestheticbookshelf/confutils": "^1.0.6",
-    "@aestheticbookshelf/smartdom": "^1.0.17",
-    "express": "^4.17.1"
+    "@aestheticbookshelf/smartdom": "^1.0.20",
+    "body-parser": "^1.19.0",
+    "connect-ensure-login": "^0.1.1",
+    "cookie-parser": "^1.4.4",
+    "express": "^4.17.1",
+    "express-session": "^1.17.0",
+    "firestore-store": "^2.0.1",
+    "passport": "^0.4.1",
+    "passport-lichess": "^1.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
